# cpp-opengl-juniorpen01s-tutor-journey

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
include/juniorpen01s-template/: direction.hpp
include/juniorpen01s-tutor-journey/: direction.hpp
src/: direction.cpp  main.cpp
tests/: direction.cpp
